knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/Assinged_Date__c.field-meta.xml
<CustomField>
    <fullName>Assinged_Date__c</fullName>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>