knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/Bootcamp_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Bootcamp_Completion_Date__c</fullName>
    <label>Bootcamp Completion Date</label>
    <type>Date</type>
</CustomField>