knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/CDS_Anticipated_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>CDS_Anticipated_Approval_Date__c</fullName>
    <label>CDS Anticipated Approval Date</label>
    <type>Date</type>
</CustomField>