knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Status__c</fullName>
    <label>Escalation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Compliance Training Esc 1 (7 Weeks from Assignment)</fullName>
            </value>
            <value>
                <fullName>Annual Compliance Training Esc 2 (11 Weeks from Assignment)</fullName>
            </value>
            <value>
                <fullName>Annual Compliance Training Esc 3 (13 Weeks from Assignment)</fullName>
            </value>
            <value>
                <fullName>Onboarding Compliance Training Escalation 1 (31 to 60 days)</fullName>
            </value>
            <value>
                <fullName>Onboarding Compliance Training Escalation 2 (61-75 days)</fullName>
            </value>
            <value>
                <fullName>Onboarding Compliance Training Escalation 3 (76+ days)</fullName>
            </value>
            <value>
                <fullName>COI Disclosure Esc 1 (7 Weeks from Assignment)</fullName>
            </value>
            <value>
                <fullName>COI Disclosure Esc 2 (11 Weeks from Assignment)</fullName>
            </value>
            <value>
                <fullName>COI Disclosure Esc 3 (13 Weeks from Assignment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>