knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/ExternalCourseID__c.field-meta.xml
<CustomField>
    <fullName>ExternalCourseID__c</fullName>
    <externalId>true</externalId>
    <label>ExternalCourseID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>