knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/Legacy_Training_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Training_Id__c</fullName>
    <label>Legacy Training Id</label>
    <type>TextArea</type>
</CustomField>