knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/Monitor_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Expiration_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitor Expiration Date</label>
    <type>Checkbox</type>
</CustomField>