knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/NP_PA_Regional_Director__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Regional_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NP/PA Regional Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>