knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/Proctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Proctor_Name__c</fullName>
    <label>Proctor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>