knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/Proctor_Site__c.field-meta.xml
<CustomField>
    <fullName>Proctor_Site__c</fullName>
    <label>Proctor Site(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>