knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/Proctorship_Comments__c.field-meta.xml
<CustomField>
    <fullName>Proctorship_Comments__c</fullName>
    <label>Proctorship Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>