knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/Skills_Checklist_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Skills_Checklist_Completion_Date__c</fullName>
    <label>Skills Checklist Completion Date</label>
    <type>Date</type>
</CustomField>