knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/State_Anticipated_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>State_Anticipated_Approval_Date__c</fullName>
    <label>State Anticipated Approval Date</label>
    <type>Date</type>
</CustomField>