knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/X140_hrs_solo_w_proctor_compl_date__c.field-meta.xml
<CustomField>
    <fullName>X140_hrs_solo_w_proctor_compl_date__c</fullName>
    <label>140 hrs/solo w/ proctor compl date</label>
    <type>Date</type>
</CustomField>