knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Training__c/fields/X30_day_Evaluation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>X30_day_Evaluation_Completion_Date__c</fullName>
    <label>30-day Evaluation Completion Date</label>
    <type>Date</type>
</CustomField>